[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "N802", # Function name should be lowercase. Stick to gRPC generation tools -> use PascalCase methods.
  "N805" # First argument of a method should be named `self`. Conflict with Pydantic validators.
]
select = [
  "E", # Enable error codes checks
  "F", # Enable checks for source files errors
  "I", # Enable Isort related checks
  "N", # Enable pep8-naming conventions
  "PIE", # Enable `specific` checks: https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
  "RET", # Enable `return` checks
  "RSE", # Enable `unnecessary parentheses on raised exception` check
  "T20", # Enable `print found` checks
  "W" # Enable linter warnings
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
check_untyped_defs = true
disable_error_code = [
  "arg-type",
  "assignment",
  "call-arg",
  "import",
  "no-redef",
  "return",
  "return-value",
  "var-annotated"
]
follow_imports = "skip"
ignore_missing_imports = true
python_version = 3.12


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
